# CS4347

./: .gitignore  README.md  pyproject.toml
Assignment1to5/: README.md  assignment1.py  assignment2.py  assignment3.arff  assignment3.py  assignment4.py  main.py  results.arff  results.csv  utils.py
