[tool.poetry]
name = "mycs4347"
version = "0.1.0"
description = ""
authors = ["Callista Chang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.20.2"
scipy = "^1.6.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
